--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~50.0.4",
     "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "styled-components": "^6.1.8"
   },
